# ayon-activity-panel

./: INTEGRATION_GUIDE.md  OFFICIAL_READY.md  README.md  RV_INTEGRATION_FLOW.md  package.py
client/: pyproject.toml
client/ayon_activity_panel/: LICENSE  __init__.py  abstract.py  activity_dev.py  addon.py  constants.py  control.py  version.py  widget.py  workers.py
client/ayon_activity_panel/api/: __init__.py  lib.py  tools.py
client/ayon_activity_panel/api/ayon/: __init__.py  activity_service.py  ayon_client_api.py  base_client.py  file_service.py  version_service.py
client/ayon_activity_panel/handlers/: __init__.py  review_handler.py  screenshot_handler.py
client/ayon_activity_panel/managers/: __init__.py  activity_display_manager.py  comment_manager.py  comparison_manager.py  representation_manager.py  rv_integration_manager.py  version_details_manager.py
client/ayon_activity_panel/plugins/: __init__.py
client/ayon_activity_panel/plugins/inventory/: __init__.py  show_activity_panel.py
client/ayon_activity_panel/plugins/load/: __init__.py  open_activity_panel.py
client/ayon_activity_panel/tools/: __init__.py
client/ayon_activity_panel/tools/snipping_tool/: __init__.py
client/ayon_activity_panel/tools/snipping_tool/ui/: __init__.py  snipping_widget.py  window.py
client/ayon_activity_panel/ui/: __init__.py  activity_panel_ui.py  annotations_dialog.py  mention_completer.py  web_like_activity_renderer.py
client/ayon_activity_panel/ui/designs/: activity_panel.ui
server/: __init__.py
server/settings/: __init__.py  main.py
